[gd_scene load_steps=46 format=3 uid="uid://dctefw3w6q8po"]

[ext_resource type="Script" path="res://Scripts/enemy_death.gd" id="1_h2t6v"]
[ext_resource type="Texture2D" uid="uid://d168pb0i65rjy" path="res://Characters/Enemies/Bringer-Of-Death/Bringer-Of-Death/SpriteSheet/Bringer-of-Death-SpritSheet.png" id="2_h4mnt"]
[ext_resource type="Script" path="res://Scripts/enemy_control.gd" id="3_r73lm"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i3sqh"]
radius = 22.0
height = 60.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ynhhp"]
radius = 44.9444

[sub_resource type="AtlasTexture" id="AtlasTexture_vvka6"]
atlas = ExtResource("2_h4mnt")
region = Rect2(0, 186, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_roekj"]
atlas = ExtResource("2_h4mnt")
region = Rect2(140, 186, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_w22md"]
atlas = ExtResource("2_h4mnt")
region = Rect2(280, 186, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7u3q"]
atlas = ExtResource("2_h4mnt")
region = Rect2(420, 186, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcryj"]
atlas = ExtResource("2_h4mnt")
region = Rect2(560, 186, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmj0x"]
atlas = ExtResource("2_h4mnt")
region = Rect2(700, 186, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jnc7"]
atlas = ExtResource("2_h4mnt")
region = Rect2(840, 186, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_jict2"]
atlas = ExtResource("2_h4mnt")
region = Rect2(980, 186, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_ing5b"]
atlas = ExtResource("2_h4mnt")
region = Rect2(0, 279, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_ge373"]
atlas = ExtResource("2_h4mnt")
region = Rect2(840, 279, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_sn0mg"]
atlas = ExtResource("2_h4mnt")
region = Rect2(980, 279, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_nf4av"]
atlas = ExtResource("2_h4mnt")
region = Rect2(0, 372, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejy1f"]
atlas = ExtResource("2_h4mnt")
region = Rect2(140, 372, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wxdd"]
atlas = ExtResource("2_h4mnt")
region = Rect2(280, 372, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_1b54c"]
atlas = ExtResource("2_h4mnt")
region = Rect2(420, 372, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ow5u"]
atlas = ExtResource("2_h4mnt")
region = Rect2(560, 372, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gjo0"]
atlas = ExtResource("2_h4mnt")
region = Rect2(700, 372, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpma1"]
atlas = ExtResource("2_h4mnt")
region = Rect2(840, 372, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_yg1uw"]
atlas = ExtResource("2_h4mnt")
region = Rect2(140, 279, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_5nbu6"]
atlas = ExtResource("2_h4mnt")
region = Rect2(280, 279, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfv6p"]
atlas = ExtResource("2_h4mnt")
region = Rect2(420, 279, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_6iaxr"]
atlas = ExtResource("2_h4mnt")
region = Rect2(560, 279, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3c7g"]
atlas = ExtResource("2_h4mnt")
region = Rect2(700, 279, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wv73"]
atlas = ExtResource("2_h4mnt")
region = Rect2(0, 0, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_svn6a"]
atlas = ExtResource("2_h4mnt")
region = Rect2(140, 0, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_fms7m"]
atlas = ExtResource("2_h4mnt")
region = Rect2(280, 0, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_8d3x3"]
atlas = ExtResource("2_h4mnt")
region = Rect2(420, 0, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_5iv42"]
atlas = ExtResource("2_h4mnt")
region = Rect2(560, 0, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gmmt"]
atlas = ExtResource("2_h4mnt")
region = Rect2(700, 0, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1i2w"]
atlas = ExtResource("2_h4mnt")
region = Rect2(840, 0, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_ug3my"]
atlas = ExtResource("2_h4mnt")
region = Rect2(980, 0, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mwj3"]
atlas = ExtResource("2_h4mnt")
region = Rect2(0, 93, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxtuv"]
atlas = ExtResource("2_h4mnt")
region = Rect2(140, 93, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_yd2hk"]
atlas = ExtResource("2_h4mnt")
region = Rect2(280, 93, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_uydxd"]
atlas = ExtResource("2_h4mnt")
region = Rect2(420, 93, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgoyc"]
atlas = ExtResource("2_h4mnt")
region = Rect2(560, 93, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_tadso"]
atlas = ExtResource("2_h4mnt")
region = Rect2(700, 93, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_er65r"]
atlas = ExtResource("2_h4mnt")
region = Rect2(840, 93, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxklu"]
atlas = ExtResource("2_h4mnt")
region = Rect2(980, 93, 140, 93)

[sub_resource type="SpriteFrames" id="SpriteFrames_limn7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvka6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_roekj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w22md")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7u3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcryj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmj0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jnc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jict2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ing5b")
}],
"loop": true,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ge373")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sn0mg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nf4av")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejy1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wxdd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1b54c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ow5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gjo0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpma1")
}],
"loop": true,
"name": &"death",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yg1uw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5nbu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfv6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6iaxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3c7g")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wv73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svn6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fms7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8d3x3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5iv42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gmmt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1i2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ug3my")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mwj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxtuv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yd2hk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uydxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgoyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tadso")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_er65r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxklu")
}],
"loop": true,
"name": &"run",
"speed": 13.0
}]

[node name="Enemy_death" type="CharacterBody2D" groups=["enemies"]]
scale = Vector2(0.8, 0.8)
script = ExtResource("1_h2t6v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-32, 17)
shape = SubResource("CapsuleShape2D_i3sqh")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-22, 14)
shape = SubResource("CircleShape2D_ynhhp")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_limn7")
animation = &"run"
frame_progress = 0.201157

[node name="EnemyControl" type="Node" parent="."]
script = ExtResource("3_r73lm")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
